--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Diego Strassmann"
+title                    : "Henriette Bering"
 title_separator          : "-"
-name                     : &name "Diego Strassmann"
+name                     : &name "Henriette Bering"
 description              : &description "personal description"
-url                      : https://dstrassmann.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://henriettebering.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "/dstrassmann/dstrassmann.github.io"
+repository               : "/henriettebering/henriettebering.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -29,7 +29,7 @@ author:
   location         : #"Earth"
   employer         : #"SOCIUM"
   uri              : # URL
-  email            : "strassma@uni-bremen.de" 
+  email            : "hbering@uni-bremen.de" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -45,12 +45,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "socioloco"
+  github           : #"socioloco"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "d-strassmann-rocha.bsky.social" # Replace this with you Bluesky username
+  bluesky          : "henriettebering.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
