--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "diego-strassmann-rocha-057a91325"
+  linkedin         : #"diego-strassmann-rocha-057a91325"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
